plugins/tools/tool_transform2/kis_transform_utils.h
@@ -95,6 +95,11 @@ public:
                                 KisPaintDeviceSP dstDevice,
                                 KisProcessingVisitor::ProgressHelper *helper);
 
+    static void transformDeviceWithCroppedDst(const ToolTransformArgs &config,
+                                              KisPaintDeviceSP srcDevice,
+                                              KisPaintDeviceSP dstDevice,
+                                              KisProcessingVisitor::ProgressHelper *helper);
+
     static QRect needRect(const ToolTransformArgs &config,
                           const QRect &rc,
                           const QRect &srcBounds);
